--- a/hh/css/IOS.css
+++ b/hh/css/IOS.css
@@ -13,7 +13,7 @@ body{
 	font-family:"微软雅黑";
 	font-size: 0.14rem;
 
-	
+
 }
 body,html{
 	width: 100%;
@@ -26,7 +26,7 @@ html{
 .wrap{
 	width: 100%;
 	display: none;
-	
+
 }
 .header{
 	width: 6.40rem;
@@ -106,10 +106,10 @@ html{
 }
 .title_1 .line1{
 	float: left;
+	margin-left:0.2rem;
 	width:1.81rem;
 	height:0.30rem;
 	background:url(../img/line.png) 0.10rem 0.15rem no-repeat;
-	background-size: 100%;
 }
 .title_1 .line2{
 	float:right;
@@ -117,11 +117,10 @@ html{
 	width:1.81rem;
 	height:0.30rem;
 	background:url(../img/line.png) 0.10rem 0.15rem no-repeat;
-	background-size: 100%;
 }
 .title_1 span{
 	float:left;
-	margin-left:10%;
+	margin-left:12%;
 	line-height: 0.30rem;
 	font-family: "微软雅黑";
 	font-size: 0.24rem;
