--- a/Birthday/css/HappyBirthday.css
+++ b/Birthday/css/HappyBirthday.css
@@ -63,10 +63,8 @@ text-align:center;
 font-family: 'brotherhood_scriptregular';
 background: -webkit-gradient(linear, left top, right top, from(#ff5733), to(#ff6127), color-stop(0.5, #fff)) 0 0 repeat;
 -webkit-background-size: 125px;
-
-color:#00FFD0;
+color:#00FFFF;
 -webkit-background-clip: text;
-
 -webkit-animation-name: color_shine;
 -webkit-animation-duration: 10s;
 -webkit-animation-iteration-count: infinite;
@@ -626,7 +624,7 @@ background-position: top right;
 
 .button-style1 ,.button-style2{
   position:relative;
-  top:60%;
+  top:68%;
   opacity:1;
   z-index:100;
 }
