--- a/Birthday/css/HappyBirthday.css
+++ b/Birthday/css/HappyBirthday.css
@@ -31,7 +31,9 @@ html, body{
   background-color:rgba(255,255,255,0.9);
   font-family: sans-serif;
 }
-
+.demo{
+  z-index: 1;
+}
 #cake {
   display: block;
   position: relative;
