--- a/Birthday/css/index.css
+++ b/Birthday/css/index.css
@@ -56,12 +56,16 @@ body :-ms-input-placeholder {
     transform: translateY(85px);
 }
 .container {
+    display: none;
     max-width: 600px;
     margin: 0 auto;
     margin-top: 7%;
     padding: 80px 0;
     height: 400px;
     text-align: center;
+}
+.bg-bubbles{
+    display: none;
 }
 .container h1 {
     font-size: 40px;
