--- a/Birthday/css/HappyBirthday.css
+++ b/Birthday/css/HappyBirthday.css
@@ -59,7 +59,8 @@ color: #EEE7E6;
 
 #message{
 text-align:center;
-  font-size:2.5em;
+  width:90%;
+  font-size:2.2em;
   bottom: 0px;
   margin:0 auto; 
 font-family: 'brotherhood_scriptregular';
